force-app/main/default/objects/custom_create199__c/custom_create199__c.object-meta.xml
<CustomObject>
    <label>Custom created object199</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects199</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>