force-app/main/default/objects/custom_create199__c/fields/custom_create_199field522__c.field-meta.xml
<CustomField>
    <fullName>custom_create_199field522__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 199field522</label>
    <type>Checkbox</type>
</CustomField>