force-app/main/default/objects/custom_create199__c/fields/custom_create_199field588__c.field-meta.xml
<CustomField>
    <fullName>custom_create_199field588__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 199field588</label>
    <type>Checkbox</type>
</CustomField>